--- a/index.html
+++ b/index.html
@@ -6,10 +6,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fahim's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-
+    <section class="introduction-area">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="purple-highlight">Fahim Hossain's</span> World</h1>
+            <h3>
+                Lets Build a Awesome Website
+            </h3>
+            <p>Hi, Hope you are well. Here I am to listen your problem, Solve your problem. Need a website? Why are you
+                waiting? Click the button below t contact me now.Lorem Ipsum is simply dummy text of the printing and
+                typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
+                an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+            <a class="button" target="_blank" href="https://www.facebook.com/f4him.s/">Contact Me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/profile-1.png">
+        </div>
+    </section>
+    <section class="about">
+        <div class="half-width">
+            <img src="images/profile 2.png">
+        </div>
+        <div class="half-width">
+            <h2>Who Am I?</h2>
+            <h3>Abut Me</h3>
+            <p>Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis rhoncus odio
+                sed urna elementum consectetur. Phasellus sit amet nunc ac lacus varius pulvinar. Ut dignissim tortor
+                sed dui accumsan feugiat. Curabitur molestie eros ante, sollicitudin sollicitudin eros vestibulum vel.
+                Sed pretium lorem sed massa rhoncus eleifend. Quisque nec neque accumsan, cursus lacus ac, imperdiet
+                lorem. Duis quis ligula vitae sem congue euismod.
+            </p>
+            <a class="button" target="_blank" href="https://www.facebook.com/f4him.s/">Contact Me</a>
+        </div>
+    </section>
+    <section class="experiences">
+        <div class="half-width" id="beginner">
+            <h2>Beginner Web Developer</h2>
+            <h3>2022-2023 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed
+                it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.<br><br>Nunc
+                placerat, sapien tristique cursus pharetra, sem ante posuere velit, vel consequat nibh purus in nunc.
+                Nunc velit purus, dapibus molestie velit at, bibendum scelerisque ipsum. Cras vitae fermentum sapien.
+                Vestibulum mattis quam vitae nisi bibendum, nec malesuada orci eleifend. In hac habitasse platea
+                dictumst. Integer vel consectetur sapien, in mollis metus. Ut ac molestie turpis. Donec mollis dui vel
+                varius facilisis. Donec congue eleifend diam, vel condimentum velit rutrum ac. In pellentesque justo et
+                risus congue consequat. Integer interdum urna eu lorem consectetur commodo.</p>
+        </div>
+        <div class="half-width" id="full-stack">
+            <h2>Full Stack Web Developer</h2>
+            <h3>2023-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue
+                JS. I even know the deployment, server and security. I will give you 100% web solution.<br><br>
+                Nunc consectetur varius ex id venenatis. Aliquam dignissim urna tellus, non faucibus lorem pretium sed.
+                Quisque vel lacinia lorem. Nam quis hendrerit tellus. Mauris eget diam nisl. Sed vitae interdum sapien.
+                Suspendisse potenti. Nullam volutpat, sem quis ultricies suscipit, dui nunc egestas quam, interdum
+                dignissim est velit eu ex. Sed ipsum dolor, ultrices non erat ac, tempus auctor nunc. Suspendisse
+                tristique neque urna, quis rhoncus ex rutrum vitae. Proin nec nunc id dui gravida gravida sed sed risus.
+            </p>
+        </div>
+    </section>
+    <footer>
+        <p>© Fahim 2023, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
